# Ginkgo

./: .gitignore  CMakeLists.txt  Client.cpp  Config.cpp  Config.h  Debug.h  Environment.cpp  Environment.h  IDsGenerator.cpp  IDsGenerator.h  Makefile.am  Makefile.am~  README.md  Server.cpp  configure.ac  configure.ac~  startup.cpp  startup.h  startup.sublime-workspace
Client/: ClaimsServer.cpp  ClaimsServer.h  Client.cpp  Client.h  GinkgoServer.cpp  GinkgoServer.h  Makefile.am
Daemon/: Daemon.cpp  Daemon.h
Executor/: Coordinator.cpp  Coordinator.h  IteratorExecutorMaster.cpp  IteratorExecutorMaster.h  IteratorExecutorSlave.cpp  Makefile.am  exchange_tracker.cpp  expander_tracker.cpp  expander_tracker.h  job_expander_tracker.cpp  job_expander_tracker.h
Ginkgo.wiki/: Add-Return-Code.md  Add-gtest.md  Code-Description.md  Configure.md  Contact-to-Us.md  DDL-of-SQL.md  DML-of-SQL.md  Home.md  Installation-steps.md  Overview.md  Reading-list.md  Updating-gcc.md  _Footer.md  editing-sidebar.md  run-tpc-h.md
IndexManager/: CSBIndexBuilding.h  IndexManager.cpp  IndexManager.h  IndexScanIterator.h  LogicalCSBIndexBuilding.cpp  LogicalCSBIndexBuilding.h  LogicalIndexScan.h
Resource/: BufferManager.cpp  NodeTracker.cpp  NodeTracker.h  ResourceManagerMaster.cpp  ResourceManagerSlave.cpp  ResourceManagerSlave.h
Test/: Makefile.am  gtest_main.cpp  set_up_environment.h
catalog/: Makefile.am  attribute.h  catalog.cpp  catalog.h  column.cpp  column.h  partitioner.cpp  partitioner.h  projection.cpp  projection.h  projection_binding.cpp  projection_binding.h  table.cpp  table.h
codegen/: CodeGenerator.cpp  CompareFunctonGenerator.cpp  ExpressionGenerator.cpp
common/: Comparator.cpp  Logging.cpp  Logging.h  Makefile.am  Message.cpp  Message.h  TypeCast.h  data_type.cpp  data_type.h  error_define.h  error_no.cpp  error_no.h  hash.h  ids.cpp  ids.h  memory_handle.h  parquet_types.cpp  parquet_types.h
conf/: config  config.template
exec_tracker/: segment_exec_status.cpp  segment_exec_status.h  segment_exec_tracker.cpp  segment_exec_tracker.h  stmt_exec_status.cpp  stmt_exec_status.h  stmt_exec_tracker.cpp  stmt_exec_tracker.h
httpserver/: Makefile.am  ResultManage.hpp  claimshttpserver.cpp  claimshttpserver.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  io_service_pool.cpp  io_service_pool.hpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
loader/: AMQ_consumer.cpp  AMQ_consumer.h  Customer.cpp  Makefile.am  SimpleProducer.cpp  data_ingestion.cpp  data_ingestion.h  data_injector.cpp  data_injector.h  data_injector_for_parq.cpp  data_injector_for_parq.h  file_connector.h  hdfs_loader.cpp  hdfs_loader.h  load_packet.cpp  load_packet.h  loader_message.h  master_loader.cpp  master_loader.h  single_file_connector.cpp  single_file_connector.h  single_thread_single_file_connector.cpp  single_thread_single_file_connector.h  slave_loader.cpp  slave_loader.h  table_file_connector.cpp  table_file_connector.h  table_parquet_reader.cpp  table_parquet_reader.h  table_parquet_writer.cpp  table_parquet_writer.h  validity.cpp  validity.h  zk_connector.cpp  zk_connector.h
loader/test/: Makefile.am  data_ingestion_test.cpp  data_ingestion_test.h  data_injector_test.h  single_file_connector_test.cpp  single_file_connector_test.h  single_thread_single_file_connector_test.h  table_file_connector_test.cpp  table_file_connector_test.h
logical_operator/: Makefile.am  Requirement.cpp  Requirement.h  logical_aggregation.cpp  logical_aggregation.h  logical_cross_join.cpp  logical_cross_join.h  logical_delete_filter.cpp  logical_delete_filter.h  logical_equal_join.cpp  logical_equal_join.h  logical_filter.cpp  logical_filter.h  logical_limit.cpp  logical_limit.h  logical_operator.cpp  logical_operator.h  logical_outer_join.cpp  logical_outer_join.h  logical_project.cpp  logical_project.h  logical_query_plan_root.cpp  logical_query_plan_root.h  logical_scan.cpp  logical_scan.h  logical_sort.cpp  logical_sort.h  logical_subquery.cpp  logical_subquery.h  logical_union.cpp  logical_union.h  plan_context.h  (+5 more)
mysql/: Makefile.am  README  mysql_connection.cpp  mysql_connection.h  mysql_define.h  mysql_field.cpp  mysql_field.h  mysql_loginer.cpp  mysql_loginer.h  mysql_result_set.cpp  mysql_result_set.h  mysql_row.cpp  mysql_row.h  mysql_sendsql.cpp  mysql_sendsql.h  mysql_server.cpp  mysql_server.h  mysql_state.cpp  mysql_state.h  mysql_util.cpp  mysql_util.h  test_main.cpp
mysql/packet/: Makefile.am  mysql_command_packet.cpp  mysql_command_packet.h  mysql_eof_packet.cpp  mysql_eof_packet.h  mysql_error_packet.cpp  mysql_error_packet.h  mysql_field_packet.cpp  mysql_field_packet.h  mysql_handshake_packet.cpp  mysql_handshake_packet.h  mysql_ok_packet.cpp  mysql_ok_packet.h  mysql_packet_header.h  mysql_resheader_packet.cpp  mysql_resheader_packet.h  mysql_row_packet.cpp  mysql_row_packet.h  mysql_spr_packet.cpp  mysql_spr_packet.h  mysql_sql_packet.cpp  mysql_sql_packet.h
scheduler/: Makefile.am  backfill_scheduler.cpp  backfill_scheduler.h  fine_grain_backfill_scheduler.cpp  fine_grain_backfill_scheduler.h  gready_scheduler.cpp  gready_scheduler.h  job_context.cpp  job_context.h  list_filling_preemption_scheduler.cpp  list_filling_preemption_scheduler.h  list_filling_scheduler.cpp  list_filling_scheduler.h  list_preemption_scheduler.cpp  list_preemption_scheduler.h  list_scheduler.cpp  list_scheduler.h  list_static_scheduler.cpp  list_static_scheduler.h  pipeline_job.cpp  pipeline_job.h  scheduler_base.cpp  scheduler_base.h  serialized_scheduler.cpp  serialized_scheduler.h  stage_task.cpp  stage_task.h
txn_manager/: Makefile.am  txn.cpp  txn.hpp  txn_client.cpp  txn_client.hpp  txn_client_test.cpp  txn_log.cpp  txn_log.hpp  txn_server.cpp  txn_server.hpp  txn_server_test.cpp  wa_log_impl.cpp  wa_log_impl.h  wa_log_recovery.cpp  wa_log_recovery.h  wa_log_server.cpp  wa_log_server.h  wa_log_store.cpp  wa_log_store.h  wa_log_test.cpp
(+314 files in other folders)
